# slighe_as_fhearr

./: README.md  pyproject.toml
data/: Settlement_All.csv  agency.csv  calendar.csv  calendar_dates.csv  corridor - Copy.csv  corridor.csv  routes.csv  routes_corridors.csv  settlement_filter.csv  stop_times.csv  stops.csv  stops_filter.csv  trips.csv
src/: _context.py  constructors.py  data_aggregator.py  dload.py  dtypes.py  transforms.py
src/ops/: corridor_ops.py  stop_ops.py
tests/: timetable_from_csv.py
